feat: ajustes no layout e deletar receita

--- a/src/pages/CreateReceita/CreateReceitaPage.module.css
+++ b/src/pages/CreateReceita/CreateReceitaPage.module.css
@@ -18,9 +18,9 @@
 .back {
   text-decoration: none;
   color: rgb(var(--color-text));
-  padding: 0.35rem 0.6rem;
   border-radius: 8px;
   border: 1px solid transparent;
+  margin-top: 4px;
 }
 .back:hover {
   background: rgba(0, 0, 0, 0.03);
@@ -41,4 +41,8 @@
 
 .formWrap {
   margin-top: 0.5rem;
+}
+
+.button-back {
+  color: rgb(var(--color-primary));
 }
