--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -141,6 +141,17 @@
   }
 }
 
+.userName {
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: rgb(var(--color-primary));
+  margin-right: 0.75rem;
+}
+
+.mobileAuth {
+  padding: 1rem;
+}
+
 @media (max-width: 420px) {
   .logo {
     margin-left: 1rem;
